<resources>
    <string name="app_name">Songsurf</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="song_title">Song Title</string>
    <string name="songsurf">Songsurf</string>
    <string name="my_playlists">My Playlists</string>
    <string name="more">More</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="add_filters">Add filters</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="personalised">Personalised</string>
    <string name="delimiter">|</string>
    <string name="recommended">Recommended</string>
    <string name="title_activity_filter">Filter</string>
    <string name="select_a_genre_to_filter_songs">Select a genre to filter songs</string>
    <string name="select_a_language_to_filter_songs">Select a language to filter songs</string>
    <string name="select_a_year_to_filter_songs">Select a year to filter songs</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="new_playlist">New playlist</string>
    <string name="title_add_to_playlist">Add to playlist</string>
    <string name="thumbnail">thumbnail</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="_10_songs">10 songs</string>
    <string name="my_playlists_text">My Playlists</string>
    <string name="delete_icon">delete_icon</string>
    <string name="song_title_playlist">Song Title</string>
    <string name="music_video_title">Music video title</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="my_account">My Account</string>
    <string name="my_account_nav">My Account</string>
    <string name="manage_account">Manage Account:</string>
</resources>