<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:fontFamily="@font/poppinsmedium"
        app:itemIconTint="@color/bottom_nav_color_state_list"
        app:itemTextColor="@color/bottom_nav_color_state_list"
        app:menu="@menu/bottom_nav_menu" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:id="@+id/leftButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/dislike_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_dislike"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/dislike_button_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/dislike"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="15dp"
            android:layout_toStartOf="@+id/rightButtonContainer"
            android:layout_toEndOf="@id/leftButtonContainer"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/rightButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_like"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/like_button_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/like"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:visibility="gone"
                />

        </LinearLayout>

    </RelativeLayout>

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="280dp"
        app:enableAutomaticInitialization="false"
        tools:ignore="NotSibling" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/filters_button"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_filters" />

        <TextView
            android:id="@+id/filters_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_filters"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_to_playlist" />

        <TextView
            android:id="@+id/add_to_playlist_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_playlist"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/youtube_player_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/personalised_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:text="@string/personalised"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:text="@string/delimiter"
            android:textColor="#7C7C7C"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/recommended_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:fontFamily="@font/poppinsmedium"
            android:padding="10dp"
            android:text="@string/recommended"
            android:textColor="#7C7C7C"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>
