<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.MyAccountActivity">

            <!-- Your Logo Image -->
            <ImageView
                android:layout_width="159dp"
                android:layout_height="58dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="@string/my_account"
                android:fontFamily="@font/poppinsbold"
                android:textSize="18sp"
                />

            <!-- Profile Picture -->
            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_profile_picture" />

            <!-- User Name -->
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_account"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsbold"
                android:textSize="16sp"
                android:layout_marginStart="25dp"
                />

            <!-- Options List -->

            <!-- Sign Out Button -->
            <ListView
                android:id="@+id/options_list"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:divider="@android:color/white"
                android:dividerHeight="0.5dp" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/sign_out"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:fontFamily="@font/poppinsmedium"
        app:itemIconTint="@color/bottom_nav_color_state_list"
        app:itemTextColor="@color/bottom_nav_color_state_list"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>
